[package]
name = "scylla-bench-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-channel = "1.8.0"
clap = { version = "4.0.32", features = ["derive"] }
hdrhistogram = "7.5.2"
scylla = "0.7.0"
tokio = {version="1.23.0", features=["full"]}
tokio-scoped = "0.2.0"
tracing = "0.1.37"
